# EKF-RIO-TC

./: .gitmodules  README.md
ekf_rio_tc/: CMakeLists.txt  package.xml
ekf_rio_tc/cfg/: EkfRio.cfg
ekf_rio_tc/cfg/cfg_ekf_rio/: ekf_rio.py
ekf_rio_tc/config/: ekf_rio.rviz
ekf_rio_tc/config/coloradar/: Coloradar_extrinsic.yaml  Coloradar_param.yaml
ekf_rio_tc/config/icins/: ICINS_extrinsic_12.yaml  ICINS_extrinsic_34.yaml  ICINS_param.yaml
ekf_rio_tc/config/sequence/: Sequence_extrinsic.yaml  Sequence_param.yaml
ekf_rio_tc/include/ekf_rio_tc/: baro_altimeter.h  data_types.h  ekf_rio_filter.h  ekf_rio_ros.h  msg_conversion.h
ekf_rio_tc/launch/ColoRadar/: ColoRadar.launch  ColoRadar_rosbag.launch
ekf_rio_tc/launch/ICINS/: ICINS.launch  ICINS_rosbag.launch
ekf_rio_tc/launch/Sequence/: Sequence.launch  Sequence_rosbag.launch
ekf_rio_tc/msg/: EkfRioCovariance.msg  EkfRioState.msg
ekf_rio_tc/python/: pose_velocity_evaluator.py
ekf_rio_tc/src/: ekf_rio_filter.cpp  ekf_rio_ros.cpp
ekf_rio_tc/src/nodes/: ros_node.cpp  rosbag_node.cpp
rio_utils/include/rio_utils/: data_types.h  math_helper.h  ros_helper.h  simple_profiler.h  strapdown.h
rio_utils/src/: simple_profiler.cpp  strapdown.cpp
